Fix z-index of infobox

--- a/app/assets/stylesheets/demands.sass
+++ b/app/assets/stylesheets/demands.sass
@@ -18,6 +18,8 @@ body
 .leaflet-control-attribution
   display: none !important
 
+.leaflet-popup
+  z-index: 9999
 
 // General class for buttons
 // TODO: remove the !important ASAP
